--- a/ProjectManagementSystem/Views/Mission/Index.cshtml
+++ b/ProjectManagementSystem/Views/Mission/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@using ProjectManagementSystem.ViewModels
 @using ProjectManagementSystem.Data
-@*@model MissionIndexViewModel*@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Http
 @inject ApplicationDbContext applicationDbContext
@@ -17,7 +16,7 @@
                 <div class="card mb-3 " data-id="@mission.Id">
                     <div class="card-body">
                         <h5 class="card-title">@mission.Name</h5>
-          @*              <h6 class="card-subtitle mb-2 text-muted">执行人：@mission.Executor.FirstOrDefault().UserName</h6>*@
+                        @*              <h6 class="card-subtitle mb-2 text-muted">执行人：@mission.Executor.FirstOrDefault().UserName</h6>*@
                         <h6 class="card-subtitle mb-2 text-muted">优先级：@mission.Priority</h6>
                     </div>
                 </div>
@@ -35,69 +34,69 @@
                                     </div>
                                     <div class="modal-body">
                                         @*<form class="needs-validation" novalidate="" asp-action="EditMission" method="post">
-                                            <div class="form-group row">
-                                                <input id="missionId" asp-for="@Model.EditId" hidden>
-                                                <label asp-for="@Model.EditName" class="col-sm-2"></label>
-                                                <div class="col-sm-10">
-                                                    <input id="missionName" type="text" class="form-control" asp-for="@Model.EditName" required>
-                                                    <div class="invalid-feedback">请输入任务的名称</div>
-                                                </div>
-                                            </div>
-                                            <br />
-                                            <div class="form-group row">
-                                                <label asp-for="@Model.EditDescription" class="col-sm-2"></label>
-                                                <div class="col-sm-10">
-                                                    <textarea id="missionDescription" asp-for="@Model.EditDescription" class="form-control" aria-label="With textarea"></textarea>
-                                                    <span class="invalid" asp-validation-for="@Model.EditDescription"></span>
-                                                </div>
-                                            </div>
-                                            <br />
-                                            <div class="form-group row">
-                                                <label asp-for="@Model.EditDeadline" class="col-sm-2"></label>
-                                                <div class="col-sm-10">
-                                                    <input id="missionDeadline" class="form-control" asp-for="@Model.EditDeadline" required>
+                                    <div class="form-group row">
+                                    <input id="missionId" asp-for="@Model.EditId" hidden>
+                                    <label asp-for="@Model.EditName" class="col-sm-2"></label>
+                                    <div class="col-sm-10">
+                                    <input id="missionName" type="text" class="form-control" asp-for="@Model.EditName" required>
+                                    <div class="invalid-feedback">请输入任务的名称</div>
+                                    </div>
+                                    </div>
+                                    <br />
+                                    <div class="form-group row">
+                                    <label asp-for="@Model.EditDescription" class="col-sm-2"></label>
+                                    <div class="col-sm-10">
+                                    <textarea id="missionDescription" asp-for="@Model.EditDescription" class="form-control" aria-label="With textarea"></textarea>
+                                    <span class="invalid" asp-validation-for="@Model.EditDescription"></span>
+                                    </div>
+                                    </div>
+                                    <br />
+                                    <div class="form-group row">
+                                    <label asp-for="@Model.EditDeadline" class="col-sm-2"></label>
+                                    <div class="col-sm-10">
+                                    <input id="missionDeadline" class="form-control" asp-for="@Model.EditDeadline" required>
 
-                                                    <div class="invalid-feedback">请输入任务的截止日期</div>
-                                                </div>
-                                            </div>
-                                            <br />
-                                            <div class="form-group row">
-                                                <label asp-for="@Model.EditStatus" class="col-sm-2"></label>
-                                                <div class="col-sm-10">
-                                                    <select id="missionStatus" asp-for="@Model.EditStatus" asp-items="Html.GetEnumSelectList<MissionStatus>()" class=" form-control valid">
-                                                    </select>
-                                                    <span class="invalid" asp-validation-for="@Model.EditStatus"></span>
-                                                </div>
-                                            </div>
-                                            <br />
-                                            <div class="form-group row">
-                                                <label asp-for="@Model.EditPriority" class="col-sm-2"></label>
-                                                <div class="col-sm-10">
+                                    <div class="invalid-feedback">请输入任务的截止日期</div>
+                                    </div>
+                                    </div>
+                                    <br />
+                                    <div class="form-group row">
+                                    <label asp-for="@Model.EditStatus" class="col-sm-2"></label>
+                                    <div class="col-sm-10">
+                                    <select id="missionStatus" asp-for="@Model.EditStatus" asp-items="Html.GetEnumSelectList<MissionStatus>()" class=" form-control valid">
+                                    </select>
+                                    <span class="invalid" asp-validation-for="@Model.EditStatus"></span>
+                                    </div>
+                                    </div>
+                                    <br />
+                                    <div class="form-group row">
+                                    <label asp-for="@Model.EditPriority" class="col-sm-2"></label>
+                                    <div class="col-sm-10">
 
-                                                    <select id="missionPriority" asp-for="@Model.EditPriority" asp-items="Html.GetEnumSelectList<MissionPriority>()" class="form-control valid">
-                                                    </select>
-                                                    <span class="invalid" asp-validation-for="@Model.EditPriority"></span>
-                                                </div>
-                                            </div>
-                                            <br />
-                                            <div class="form-group row">
-                                                <label asp-for="@Model.EditExecutor" class="col-sm-2"></label>
-                                                <div class="col-sm-10">
-                                                    <select id="missionExecutor" asp-for=@Model.EditExecutor class="selectpicker form-control valid" data-live-search="true" multiple required="">
-                                                        @foreach (var item in userManager.Users.Select(a => a.UserName))
-                                                        {
-                                                            <option value="@item">@item</option>
-                                                        }
-                                                    </select>
-                                                    <div class="invalid-feedback">请选择执行人</div>
-                                                </div>
-                                            </div>
-                                            <br />
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">返回</button>
-                                                <button type="submit" class="btn btn-primary">提交</button>
-                                            </div>
-                                        </form>*@
+                                    <select id="missionPriority" asp-for="@Model.EditPriority" asp-items="Html.GetEnumSelectList<MissionPriority>()" class="form-control valid">
+                                    </select>
+                                    <span class="invalid" asp-validation-for="@Model.EditPriority"></span>
+                                    </div>
+                                    </div>
+                                    <br />
+                                    <div class="form-group row">
+                                    <label asp-for="@Model.EditExecutor" class="col-sm-2"></label>
+                                    <div class="col-sm-10">
+                                    <select id="missionExecutor" asp-for=@Model.EditExecutor class="selectpicker form-control valid" data-live-search="true" multiple required="">
+                                    @foreach (var item in UserManager<ApplicationUser>.Users.Select(a => a.UserName))
+                                    {
+                                    <option value="@item">@item</option>
+                                    }
+                                    </select>
+                                    <div class="invalid-feedback">请选择执行人</div>
+                                    </div>
+                                    </div>
+                                    <br />
+                                    <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">返回</button>
+                                    <button type="submit" class="btn btn-primary">提交</button>
+                                    </div>
+                                    </form>*@
                                     </div>
                                 </div>
                             </div>
@@ -174,66 +173,66 @@
                                 aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                     @*   <form class="needs-validation" novalidate="" asp-action="AddMission" method="post">
-                            <div class="form-group row">
-                                <label asp-for="@Model.Name" class="col-sm-2"></label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" asp-for="@Model.Name" required>
-                                    <div class="invalid-feedback">请输入任务的名称</div>
-                                </div>
-                            </div>
-                            <br />
-                            <div class="form-group row">
-                                <label asp-for="@Model.Description" class="col-sm-2"></label>
-                                <div class="col-sm-10">
-                                    <textarea asp-for="@Model.Description" class="form-control" aria-label="With textarea"></textarea>
-                                    <span class="invalid" asp-validation-for="@Model.Description"></span>
-                                </div>
-                            </div>
-                            <br />
-                            <div class="form-group row">
-                                <label asp-for="@Model.Deadline" class="col-sm-2"></label>
-                                <div class="col-sm-10">
-                                    <input class="form-control" asp-for="@Model.Deadline" value="@DateTime.Now.ToString("yyyy-MM-dd")" required="">
-                                    <div class="invalid-feedback">请输入任务的截止日期</div>
-                                </div>
-                            </div>
-                            <br />
-                            <div class="form-group row">
-                                <label asp-for="@Model.Status" class="col-sm-2"></label>
-                                <div class="col-sm-10">
-                                    <select asp-for="@Model.Status" asp-items="Html.GetEnumSelectList<MissionStatus>()" class="form-control valid">
-                                    </select>
-                                    <span class="invalid" asp-validation-for="@Model.Status"></span>
-                                </div>
-                            </div>
-                            <br />
-                            <div class="form-group row">
-                                <label asp-for="@Model.Priority" class="col-sm-2"></label>
-                                <div class="col-sm-10">
-                                    <select asp-for="@Model.Priority" asp-items="Html.GetEnumSelectList<MissionPriority>()" class="form-control valid">
-                                    </select>
-                                    <span class="invalid" asp-validation-for="@Model.Priority"></span>
-                                </div>
-                            </div>
-                            <br />
-                            <div class="form-group row">
-                                <label asp-for="@Model.Executor" class="col-sm-2"></label>
-                                <div class="col-sm-10">
-                                    <select asp-for=@Model.Executor class="selectpicker form-control valid" data-live-search="true" multiple required="">
-                                        @foreach (var item in userManager.Users.Select(a => a.UserName))
-                                        {
-                                            <option>@item</option>
-                                        }
-                                    </select>
-                                    <div class="invalid-feedback">请选择执行人</div>
-                                </div>
-                            </div>
-                            <br />
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">返回</button>
-                                <button type="submit" class="btn btn-primary">提交</button>
-                            </div>
+                        @*   <form class="needs-validation" novalidate="" asp-action="AddMission" method="post">
+                        <div class="form-group row">
+                        <label asp-for="@Model.Name" class="col-sm-2"></label>
+                        <div class="col-sm-10">
+                        <input type="text" class="form-control" asp-for="@Model.Name" required>
+                        <div class="invalid-feedback">请输入任务的名称</div>
+                        </div>
+                        </div>
+                        <br />
+                        <div class="form-group row">
+                        <label asp-for="@Model.Description" class="col-sm-2"></label>
+                        <div class="col-sm-10">
+                        <textarea asp-for="@Model.Description" class="form-control" aria-label="With textarea"></textarea>
+                        <span class="invalid" asp-validation-for="@Model.Description"></span>
+                        </div>
+                        </div>
+                        <br />
+                        <div class="form-group row">
+                        <label asp-for="@Model.Deadline" class="col-sm-2"></label>
+                        <div class="col-sm-10">
+                        <input class="form-control" asp-for="@Model.Deadline" value="@DateTime.Now.ToString("yyyy-MM-dd")" required="">
+                        <div class="invalid-feedback">请输入任务的截止日期</div>
+                        </div>
+                        </div>
+                        <br />
+                        <div class="form-group row">
+                        <label asp-for="@Model.Status" class="col-sm-2"></label>
+                        <div class="col-sm-10">
+                        <select asp-for="@Model.Status" asp-items="Html.GetEnumSelectList<MissionStatus>()" class="form-control valid">
+                        </select>
+                        <span class="invalid" asp-validation-for="@Model.Status"></span>
+                        </div>
+                        </div>
+                        <br />
+                        <div class="form-group row">
+                        <label asp-for="@Model.Priority" class="col-sm-2"></label>
+                        <div class="col-sm-10">
+                        <select asp-for="@Model.Priority" asp-items="Html.GetEnumSelectList<MissionPriority>()" class="form-control valid">
+                        </select>
+                        <span class="invalid" asp-validation-for="@Model.Priority"></span>
+                        </div>
+                        </div>
+                        <br />
+                        <div class="form-group row">
+                        <label asp-for="@Model.Executor" class="col-sm-2"></label>
+                        <div class="col-sm-10">
+                        <select asp-for=@Model.Executor class="selectpicker form-control valid" data-live-search="true" multiple required="">
+                        @foreach (var item in UserManager<ApplicationUser>.Users.Select(a => a.UserName))
+                        {
+                        <option>@item</option>
+                        }
+                        </select>
+                        <div class="invalid-feedback">请选择执行人</div>
+                        </div>
+                        </div>
+                        <br />
+                        <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">返回</button>
+                        <button type="submit" class="btn btn-primary">提交</button>
+                        </div>
                         </form>*@
                     </div>
 
