--- a/ProjectManagementSystem/Views/User/EditUser.cshtml
+++ b/ProjectManagementSystem/Views/User/EditUser.cshtml
@@ -2,7 +2,7 @@
 @using ProjectManagementSystem.ViewModels
 @using ProjectManagementSystem.Data
 @model UserEditViewModel
-@inject RoleManager<IdentityRole> roleManager;
+@inject RoleManager<IdentityRole<int>> roleManager;
 @{
     ViewBag.Title = "编辑用户";
 }
